--- a/client/package.json
+++ b/client/package.json
@@ -2,12 +2,18 @@
   "name": "eco-site",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@apollo/client": "^3.7.9",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^5.2.3",
+    "jwt-decode": "^2.2.0",
+    "react": "^16.13.1",
+    "react-bootstrap": "^2.7.0",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^6.2.1",
     "react-lottie": "^1.2.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
