--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "chart.js": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
