--- a/client/package.json
+++ b/client/package.json
@@ -5,15 +5,20 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "@apollo/client": "^3.7.9",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.3.0",
     "gsap": "^3.11.5",
     "jwt-decode": "^2.2.0",
-    "react": "^16.13.1",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
