--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
+    "tailwindcss-react": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
