added openai on Learn

--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,13 @@
     "chart.js": "^4.3.0",
     "gsap": "^3.11.5",
     "jwt-decode": "^2.2.0",
+    "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
     "tailwindcss-react": "^0.0.0",
