styled donate page more

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
         "concurrently": "^5.1.0"
     },
     "dependencies": {
-    
         "force": "^0.0.3",
+        "openai": "^3.2.1",
         "react-lottie": "^1.2.3"
     }
 }
