--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.0-placeholder-for-preset-env.2",
         "concurrently": "^5.1.0"
     },
     "dependencies": {
