--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@fortawesome/fontawesome-svg-core": "^6.4.0",
         "@fortawesome/free-brands-svg-icons": "^6.4.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
+        "axios": "^1.4.0",
         "force": "^0.0.3",
         "react-lottie": "^1.2.3",
         "react-tooltip": "^5.13.1"
