updates to openai

--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,13 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.3.0",
+    "dotenv": "^16.0.3",
+    "dotenv-webpack": "^8.0.1",
     "gsap": "^3.11.5",
+    "install": "^0.13.0",
     "jwt-decode": "^2.2.0",
     "openai": "^3.2.1",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-chartjs-2": "^5.2.0",
@@ -27,7 +31,7 @@
     "react-helmet": "^6.1.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "tailwindcss-react": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
