--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "@apollo/client": "^3.7.9",
+    "@chatscope/chat-ui-kit-react": "^1.10.1",
+    "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
@@ -23,6 +25,7 @@
     "install": "^0.13.0",
     "jwt-decode": "^2.2.0",
     "openai": "^3.2.1",
+    "path": "^0.12.7",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -33,7 +36,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
     "tailwindcss-react": "^0.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.86.0"
   },
   "scripts": {
     "start": "react-scripts start",
