--- a/package.json
+++ b/package.json
@@ -18,12 +18,10 @@
         "concurrently": "^5.1.0"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^6.4.0",
-        "@fortawesome/free-brands-svg-icons": "^6.4.0",
-        "@fortawesome/react-fontawesome": "^0.2.0",
-        "axios": "^1.4.0",
-        "force": "^0.0.3",
-        "react-lottie": "^1.2.3",
-        "react-tooltip": "^5.13.1"
+        "force": "^0.0.3"
+    },
+    "engines": {
+        "node": "18.14.2",
+        "npm": "7.10.0"
     }
 }
