--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "concurrently": "^5.1.0"
     },
     "dependencies": {
+        "@chatscope/chat-ui-kit-react": "^1.10.1",
         "@fortawesome/fontawesome-svg-core": "^6.4.0",
         "@fortawesome/free-brands-svg-icons": "^6.4.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
