--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "apollo-server-express": "^3.6.2",
+        "bcrypt": "^5.1.0",
         "express": "^4.18.2",
         "graphql": "^16.3.0",
         "jsonwebtoken": "^8.5.1",
