--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "1.0.0",
     "description": "",
     "main": "server/server.js",
+    "engines": {
+        "node": "^18"
+    },
     "scripts": {
         "start": "cd server && npm run start ",
         "develop": "concurrently \"cd server && npm run start\" \"cd client && npm start\"",
@@ -19,9 +22,5 @@
     },
     "dependencies": {
         "force": "^0.0.3"
-    },
-    "engines": {
-        "node": "18.14.2",
-        "npm": "7.10.0"
     }
 }
